Final Version Submitted to iLearn
Slides are completed with text and images. All cat pictures have been deleted.

--- a/Hunt_Emily_Lightning_Talk.tex
+++ b/Hunt_Emily_Lightning_Talk.tex
@@ -67,7 +67,7 @@
 	
 % Title setup	
 \title{IMPROVING THE WRITING AND ORGANISING OF NOTES ON A FILM}
-\author{Emily Hunt \texttt{emily.hunt@students.mq.edu.au}}
+\author{Emily Hunt \texttt{DOI 10.17605/OSF.IO/MRNW4}}
 % add title in headbox
 \setbeamertemplate{headline}
 {\leavevmode
@@ -169,7 +169,7 @@
       \vspace{1pt}
       
       \begin{itemize}
-          \item I would provide no concrete indication of what point of the film I was referring to, requiring me to scrub through to find it.
+          \item I would provide no concrete indication of what point of the film I was referring to, which would require me to scrub through to find it.
       \end{itemize}
       \begin{itemize}
           \item I would spend a lot of time searching my notes for observations on particular ideas (e.g. the use of colour).
@@ -178,24 +178,22 @@
     \end{column}
   
   \begin{column}[c]{0.45\textwidth}
+  \begin{center}
 %http://lorempixel.com/1200/800/cats/Figure2/     
 %http://lorempixel.com/1200/800/cats/Figure3/
 \includegraphics[width=1\textwidth,height=0.5\textheight,keepaspectratio]{%
-figure/logo1.png}\\
-\tiny{This is a small caption}
+figure/video_player.png}\\
+\tiny{\href{https://pixabay.com/illustrations/vector-video-player-movie-player-941434/}{“vector-video-player-movie-player-941434”} by \href{https://pixabay.com/users/pixel_perfect-1411206/}{Pixel\textunderscore perfect} is licensed under \href{https://pixabay.com/service/terms/}{the Pixabay License}}
 
-\vspace{20pt}
-\includegraphics[width=1\textwidth,height=0.5\textheight,keepaspectratio]{%
-figure/figure1.png}
-
-\tiny{This is a small caption}
+\vspace{2pt}
+\includegraphics[width=0.5\textwidth,height=0.5\textheight,keepaspectratio]{%
+figure/search.png}\\
+\tiny{\href{https://pixabay.com/vectors/search-loupe-document-97587/}{“search-loupe-document-97587”} by \href{https://pixabay.com/users/openicons-28911/}{OpenIcons} is licensed under \href{https://pixabay.com/service/terms/}{the Pixabay License}
+}
+\end{center}
     \end{column}
-    
-  \end{columns}
-
+\end{columns}
   
-
-   
 \end{frame}
 
 \begin{frame}\label{\secvariable}
@@ -250,7 +248,7 @@ figure/output.png}\\
    \item Using the files downloaded from the repositoy, I compiled a dist folder using NPM and Node.js.
    \item I installed Jekyll.
    \item I copied the contents of the complied dist folder to a folder called docs and pushed this to my Hunt-Exercises repository on GitHub.
-   \item I created index.md in my repository and within this file, created a link to the docs folder. I then selected that GitHub paes run off the master branch of by repository.
+   \item I created index.md in my repository and within this file, created a link to the docs folder. I then selected that GitHub pages run off the master branch of my repository.
    \item This can be accessed with my entire proof of concept at \url{https://mq-foar705.github.io/Hunt-Exercises/}
 \end{itemize}  
       
@@ -260,7 +258,7 @@ figure/output.png}\\
 
 \begin{frame}\label{\secvariable}
 \label{oTranscribe_interface}
-\hyperlink{slab}{\beamerbutton{\dots back to steps}}\\
+\hyperlink{radar}{\beamerbutton{\dots back to steps}}\\
 \begin{center}
   \vspace{-0.2cm}
   %http://lorempixel.com/1200/800/cats/Figure4/
@@ -306,7 +304,7 @@ figure/shell_script.png}
   \end{columns}
 
 \begin{center}
-Creative commons attribution    
+\tiny{\href{https://commons.wikimedia.org/wiki/File:Antu_folder-brown.svg}{“Antu folder-brown.svg”} by \href{https://github.com/fabianalexisinostroza/}{Fabián Alexis} is licensed under \href{https://creativecommons.org/licenses/by-sa/3.0/deed.en}{CC BY-SA 3.0}} 
 \end{center}
 
   
@@ -374,12 +372,10 @@ Usage: with Film Name as the working directory, run\\
 %http://lorempixel.com/1200/800/cats/Figure6/
 \begin{center}
 \includegraphics[width=1\textwidth,height=0.75\textheight,keepaspectratio]{%
-figure/figure6.png}
+figure/output.png}
 \end{center}
-    \parbox{\linewidth}{
-
-Etiam cursus nibh nec ex tincidunt pharetra quis vel nibh. Sed condimentum lobortis mollis. Donec vitae odio nec lacus iaculis condimentum. Proin dictum consequat quam nec. }
-
+    \parbox{\linewidth}{\begin{center}
+Input Into Script -----------\textgreater{} Output Of Script \end{center}}
 \end{frame}
 
 
@@ -387,19 +383,18 @@ Etiam cursus nibh nec ex tincidunt pharetra quis vel nibh. Sed condimentum lobor
 \mysection{conclusion}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}\label{\secvariable}
-  
+\textbf{Some Concluding Points:}  
   \begin{itemize}
-   \item Curabitur viverra massa vel elit tincidunt lacinia. Pellentesque id est lobortis, interdum felis nec, faucibus augue. Suspendisse varius sit amet dui ac dignissim. Quisque mattis, odio a congue lobortis, eros turpis placerat enim, ac tempor lorem nisl ut velit. Mauris vel nulla a quam viverra faucibus. 
-  \item Quisque sed orci eu libero mattis lobortis. Curabitur aliquam lorem neque, ac auctor justo sagittis sed. Nunc augue nisl, mattis sed turpis at, elementum lobortis augue. Vestibulum porta felis bibendum mattis iaculis. Nulla dignissim varius rutrum.
-  \item Vivamus eget semper nunc. Donec sodales ornare porttitor. Curabitur commodo viverra arcu. Aliquam consequat felis non dolor consequat ultricies. Mauris non finibus nisl. Sed tincidunt felis at porttitor posuere.
-
+  \item My project addresses the collection as well as data processing \& analysis stages of the research data lifecycle (Corti et al. 2014 17-18)
+  \item It also exists within the intersection of 'the fields of Digital Humanities and Cinema \& Media Studies (which) are an increasingly fruitful pairing' (deWaard 2016: n.p.)
+  \item By allowing me to better organise my notes based on their content and have an associated timestamp with each of these, my tools will save me a lot of time.
   \end{itemize}
-
-  \usebeamerfont{bodytext}
-  K\"ohler, A., J. N. McElwaine, B. Sovilla, M. Ash, P. Brennan (in Review),
-Surge dynamics of the 3 February 2015 avalanches in Valle\'e de la Sionne,
-\textit{J. Geophys. Res.} 
-  
+\vspace{10pt}
+\tiny{
+Corti, Louise, den Eynden, Veerle Van, Bishop, Libby, Woollard (2014) \textit{Managing and Sharing Research Data: A Guide to Good Practice}, United Kingdom: SAGE.\\
+\vspace{5pt}
+deWaard, Andrew (2016) 'ClipNotes in the Classroom: Video Annotation Software for Instruction and Collaboration', \textit{DH and Media Studies Crossovers
+Cinema Journal Teaching Dossier}, vol. 3, no. 3, accessed at \url{http://www.teachingmedia.org/clipnotes-in-the-classroom-video-annotation-software-for-instruction-and-collaboration/}}
 \end{frame}
 
 
